# GPU-Vectorized-Batch-PIR

./: .gdb_history  .gdbinit  .gitignore  CMakeLists.bak  CMakeLists.txt  xmake.lua
batch_utils/: batch_ciphertext.cpp  batch_data.h  batch_evaluator.cpp  batch_evaluator.h  batch_plaintext.cpp  batch_utils.h  batch_vector.cpp
he_utils/header/: ciphertext.h  decryptor.h  encoder.h  encryption_params.h  encryptor.h  evaluator.h  hecontext.h  heutils.h  keygen.h  keys.h  myhe.h  plaintext.h  utils.h
he_utils/src/: ciphertext.cpp  decryptor.cpp  encoder.cpp  encryption_params.cpp  encryptor.cpp  evaluator.cpp  hecontext.cpp  keygen.cpp  keys.cpp  plaintext.cpp
header/: mockClient.h  pirParams.h  server.h
pir/header/: mockClient.h  pirParams.h  server.h  utils.h
pir/src/: mockClient.cpp  mockClient.cu  server.cpp  server.cu  serverDim1.cpp  serverDim1.cu  serverDim2.cpp  serverDim2.cu  serverDim3.cpp  serverDim3.cu  test.cpp  utils.cpp
src/: mockClient.cu  server.cu  serverDim1.cu  test.cpp
